# youtube-ics

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  update.sh
.github/workflows/: build.yml  validate.yml
chart/: Chart.yaml  values.yaml
chart/templates/: cronjob.yaml  externalsecret-env.yaml  pvc.yaml
docs/: typikon-api-handoff.md
src/youtube_ics/: __init__.py  cli.py  config.py  enrich.py  ics.py  models.py  plan.py  scheduler.py  sink.py  store.py  sync.py  titles.py  youtube.py
tests/: test_api_source.py  test_assemble.py  test_filter.py  test_scheduler.py  test_store.py  test_sync.py  test_titles.py  test_youtube.py
