[project]
name = "youtube-ics"
version = "0.1.0"
description = "Create YouTube scheduled live broadcasts from a Google Calendar ICS feed."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "icalendar>=6.0",
    "recurring-ical-events>=3.0",
    "google-api-python-client>=2.130",
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
youtube-ics = "youtube_ics.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
