[project]
name = "youtube-ics"
version = "0.1.0"
description = "Create YouTube scheduled live broadcasts from a Google Calendar ICS feed."
readme = "README.md"
license = "MIT"
authors = [{ name = "Tomas Voboril" }]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "icalendar>=6.0",
    "recurring-ical-events>=3.0",
    "google-api-python-client>=2.130",
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
    "tzdata>=2024.1",  # zoneinfo tz database for slim containers (America/Chicago)
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
youtube-ics = "youtube_ics.cli:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
